--- a/scb-ui-zk/src/main/webapp/pages/secured/TRAINER/seznam-plateb.zul
+++ b/scb-ui-zk/src/main/webapp/pages/secured/TRAINER/seznam-plateb.zul
@@ -45,7 +45,7 @@
 					emptyMessage="${c:l('txt.ui.common.noDataFound')}"
 					class="listbox" >
 			        <auxhead>
-			            <auxheader class="header" colspan="4" >
+			            <auxheader class="header" colspan="5" >
 			            	<hbox hflex="1" height="42px" align="center" >
 				            	<vbox hflex="1" vflex="1" sclass="header-div" pack="center" >
 			            			<hbox vflex="1" align="center">
@@ -57,7 +57,7 @@
 			            		</vbox>
 			            		<vbox hflex="1" vflex="1" align="end" pack="center" sclass="header-div" >
 			            			<hbox vflex="1" pack="center" align="center">
-			            				<button iconSclass="z-icon-download" onClick="@command('exportToExcel',listbox=courseList)" tooltiptext="${c:l('txt.ui.common.downloadToFile')}" />
+			            				<button iconSclass="z-icon-download" onClick="@command('exportToExcel',listbox=paymentList)" tooltiptext="${c:l('txt.ui.common.downloadToFile')}" />
 		            					<button iconSclass="z-icon-refresh" onClick="@command('refreshDataCmd')" tooltiptext="${c:l('txt.ui.common.refreshData')}" />
 									</hbox>
 								</vbox>
@@ -68,10 +68,8 @@
 			        <!-- Filter -->
 					<auxhead height="37px">
 						<auxheader class="filter">
-<!-- 							<textbox hflex="1" -->
-<!-- 								instant="true" -->
-<!-- 								value="@bind(vm.filter.courseName)" -->
-<!-- 								onChange="@command('filterDomCmd')" /> -->
+						</auxheader>
+						<auxheader class="filter">
 						</auxheader>
 						<auxheader class="filter">
 						</auxheader>
@@ -83,8 +81,9 @@
 					
 			        <listhead>
 			            <listheader label="${c:l('txt.ui.common.date')}" sort="auto(paymentDate)" align="left" />
-			            <listheader label="${c:l('txt.ui.common.Type')}" sort="auto(type)" align="center" />
-			            <listheader label="${c:l('txt.ui.common.Amount')}" sort="auto(amount)" align="right" />
+			            <listheader label="${c:l('txt.ui.common.Type')}" sort="auto(type)" align="left" />
+			            <listheader label="${c:l('txt.ui.common.Processed')}" sort="auto(processType)" align="left" />
+			            <listheader label="${c:l('txt.ui.common.Amount')}" sort="auto(amount)" align="center" />
 			            <listheader hflex="min" align="center" />
 			        </listhead>
 			         
@@ -92,18 +91,25 @@
 			            <listitem>
 			                <listcell label="${each.paymentDate}" onDoubleClick="@command('detailCmd', uuid=each.uuid)" />
 			                <listcell label="@load(each.type) @converter(vm.enumLabelConverter)" onDoubleClick="@command('detailCmd', uuid=each.uuid)" />
+			                <listcell label="@load(each.processType) @converter(vm.enumLabelConverter)" onDoubleClick="@command('detailCmd', uuid=each.uuid)" />
 			                <listcell label="${each.amount} ${c:l('txt.ui.common.CZK')}" onDoubleClick="@command('detailCmd', uuid=each.uuid)" />
 			                <listcell>
-<!-- 			                	<button label="Detail" onClick="@command('detailCmd', uuid=each.uuid)" /> -->
 								<button iconSclass="z-icon-ellipsis-h" hflex="min" width="20px" popup="menuPayment_${each.uuid}, position=after_end" />
 			                	<menupopup id="menuPayment_${each.uuid}" >
 									<menuitem label="Detail" onClick="@command('detailCmd', uuid=each.uuid)" />
-									<menuitem label="Odstranit" onClick="@command('deleteCmd', item=each)" />
+									<menuitem label="Odstranit" onClick="@command('deleteCmd', item=each)" disabled="@load(each.processType eq 'AUTOMATIC')" />
 						       	</menupopup>
 			                </listcell>
 			            </listitem>
 			        </template>
 			    </listbox>
+			    
+			    <vlayout>
+				    <label value="@load(vm.paymentSum)" />
+				    <label value="@load(vm.course.priceSemester1)" />
+				    <label value="@load(vm.course.priceSemester2)" />
+			    </vlayout>
+			    
 			</vbox>
 			
 			<vbox hflex="1" />
