--- a/scb-ui-zk/src/main/webapp/pages/secured/TRAINER/seznam-plateb.zul
+++ b/scb-ui-zk/src/main/webapp/pages/secured/TRAINER/seznam-plateb.zul
@@ -16,15 +16,126 @@
 			
 			<vbox hflex="20" pack="center" align="center" >
 				<hbox hflex="1" pack="end" align="center" >
-					<vbox hflex="1" align="center" >
+					<vbox hflex="4" align="start" >
 						<headline label="${vm.pageHeadline}" menuSelected="menu_courseParticipantList" />
 					</vbox>
+					<hbox hflex="1" vflex="1" align="center" pack="end" >
+						<button onClick="@command('backCmd')" 
+							label="${c:l('txt.ui.common.Back')}" 
+							visible="@load(vm.isBackButtonVisible())"
+							iconSclass="z-icon-arrow-left" />
+					</hbox>
 				</hbox>
-				<vbox hflex="1" vflex="1" align="end" pack="center">
-					<button onClick="@command('backCmd')" 
-						label="${c:l('txt.ui.common.Back')}" 
-						visible="@load(vm.isBackButtonVisible())"
-						iconSclass="z-icon-arrow-left" />
+				<vbox hflex="1" vflex="1" align="center" pack="center">
+					<!-- Souhrn plateb -->
+					<grid hflex="1">
+						<auxhead>
+							<auxheader class="header" colspan="3" >
+								<vbox hflex="1" vflex="1" sclass="header-div" pack="center" >
+									<label value="${c:l('txt.ui.common.Summary')}" />
+								</vbox>
+							</auxheader>
+						</auxhead>
+						<columns>
+							<column />
+							<column align="right" />
+							<column align="right"/>
+						</columns>
+						<rows>
+							<row>
+								<label value="${c:l('txt.ui.common.Semester1')}" style="white-space: nowrap;" />
+								<cell>
+									<a iconSclass="z-icon-circle" style="font-size: 20px; color: red;" 
+										visible="@load(vm.coursePaymentVO.stateFirstSemester eq 'NO_PAYMENT')"
+										popup="semester1Popup" />
+								    <a iconSclass="z-icon-circle" style="font-size: 20px; color: orange;" 
+								    	visible="@load(vm.coursePaymentVO.stateFirstSemester eq 'PARTLY')"
+								    	popup="semester1Popup" />
+								    <a iconSclass="z-icon-check-circle" style="font-size: 20px; color: green;" 
+								    	visible="@load(vm.coursePaymentVO.stateFirstSemester eq 'PAYED')"
+								    	popup="semester1Popup" />
+								    <popup id="semester1Popup">
+								    	<vbox style="margin: 5px;">
+									    	<label value="@load(vm.coursePaymentVO.stateFirstSemester) @converter(vm.enumLabelConverter)" />
+									    	<hbox visible="@load(vm.coursePaymentVO.stateFirstSemester eq 'PARTLY')">
+									    		<label value="${c:l('txt.ui.common.ToPay')}" style="white-space: nowrap;" />
+									    		<label value="@load(vm.coursePaymentVO.toPayFirstSemester)" /><label value=" ${c:l('txt.ui.common.CZK')}" />
+									    	</hbox>
+								    	</vbox>
+								    </popup>
+								</cell>
+								<cell>
+									<label value="@load(vm.coursePaymentVO.payedFirstSemester)" /> <label value=" ${c:l('txt.ui.common.CZK')}" /> 
+									/ <label value="@load(vm.coursePaymentVO.priceFirstSemester)" /> <label value=" ${c:l('txt.ui.common.CZK')}" />
+								</cell>
+							</row>
+							<row>
+								<label value="${c:l('txt.ui.common.Semester2')}" style="white-space: nowrap;" />
+								<cell>
+									<a iconSclass="z-icon-circle" style="font-size: 20px; color: red;" 
+										visible="@load(vm.coursePaymentVO.stateSecondSemester eq 'NO_PAYMENT')"
+										popup="semester2Popup" />
+								    <a iconSclass="z-icon-circle" style="font-size: 20px; color: orange;" 
+								    	visible="@load(vm.coursePaymentVO.stateSecondSemester eq 'PARTLY')"
+								    	popup="semester2Popup"/>
+								    <a iconSclass="z-icon-check-circle" style="font-size: 20px; color: green;" 
+								    	visible="@load(vm.coursePaymentVO.stateSecondSemester eq 'PAYED')"
+								    	popup="semester2Popup" />
+								    <popup id="semester2Popup">
+								    	<vbox style="margin: 5px;">
+									    	<label value="@load(vm.coursePaymentVO.stateSecondSemester) @converter(vm.enumLabelConverter)" />
+									    	<hbox visible="@load(vm.coursePaymentVO.stateSecondSemester eq 'PARTLY')">
+									    		<label value="${c:l('txt.ui.common.ToPay')}" style="white-space: nowrap;" />
+									    		<label value="@load(vm.coursePaymentVO.toPaySecondSemester)" /><label value=" ${c:l('txt.ui.common.CZK')}" />
+									    	</hbox>
+								    	</vbox>
+								    </popup>
+								</cell>
+								<cell>
+									<label value="@load(vm.coursePaymentVO.payedSecondSemester)" /> <label value=" ${c:l('txt.ui.common.CZK')}" /> 
+									/ <label value="@load(vm.coursePaymentVO.priceSecondSemester)" /> <label value=" ${c:l('txt.ui.common.CZK')}" />
+								</cell>
+							</row>
+							<row>
+								<label value="${c:l('txt.ui.common.Overpayed')}" />
+								<cell>
+									<a iconSclass="z-icon-exclamation" style="font-size: 20px; color: red;" visible="@load(vm.coursePaymentVO.overpayed)" />
+								</cell>
+								<cell>
+									<label value="@load(vm.coursePaymentVO.getOverpayed())" /> <label value=" ${c:l('txt.ui.common.CZK')}" />
+								</cell>
+							</row>
+							<row style="background: #e4e6e9;">
+								<label value="${c:l('txt.ui.common.Sum')}" style="font-weight: bold;" />
+								<cell >
+									<a iconSclass="z-icon-circle" style="font-size: 20px; color: red;" 
+										visible="@load(vm.coursePaymentVO.stateTotal eq 'NO_PAYMENT')"
+										popup="paymentSumPopup" />
+								    <a iconSclass="z-icon-circle" style="font-size: 20px; color: orange;" 
+								    	visible="@load(vm.coursePaymentVO.stateTotal eq 'PARTLY')"
+								    	popup="paymentSumPopup" />
+								    <a iconSclass="z-icon-check-circle" style="font-size: 20px; color: green;" 
+								    	visible="@load(vm.coursePaymentVO.stateTotal eq 'PAYED')"
+								    	popup="paymentSumPopup" />
+								    <popup id="paymentSumPopup">
+								    	<vbox style="margin: 5px;">
+									    	<label value="@load(vm.coursePaymentVO.stateTotal) @converter(vm.enumLabelConverter)" />
+									    	<hbox visible="@load(vm.coursePaymentVO.stateTotal eq 'PARTLY')">
+									    		<label value="${c:l('txt.ui.common.ToPay')}" style="white-space: nowrap;" />
+									    		<label value="@load(vm.coursePaymentVO.toPaySum)" /><label value=" ${c:l('txt.ui.common.CZK')}" />
+									    	</hbox>
+								    	</vbox>
+								    </popup>
+								</cell>
+								<cell>
+									<label value="@load(vm.coursePaymentVO.paymentSum)" style="font-weight: bold;" />
+							    	<label value=" ${c:l('txt.ui.common.CZK')}" style="font-weight: bold;"/>
+							    	<label value=" / " style="font-weight: bold;" /> 
+							    	<label value="@load(vm.coursePaymentVO.totalPrice)" style="font-weight: bold;" /> <label value=" ${c:l('txt.ui.common.CZK')}" style="font-weight: bold;" />
+								</cell>
+							</row>
+						</rows>
+					</grid>
 				</vbox>
 			</vbox>
 					
@@ -65,20 +176,6 @@
 			            </auxheader>
 			        </auxhead>
 			        
-			        <!-- Filter -->
-					<auxhead height="37px">
-						<auxheader class="filter">
-						</auxheader>
-						<auxheader class="filter">
-						</auxheader>
-						<auxheader class="filter">
-						</auxheader>
-						<auxheader class="filter">
-						</auxheader>
-						<auxheader class="filter">
-						</auxheader>
-					</auxhead>
-					
 			        <listhead>
 			            <listheader label="${c:l('txt.ui.common.date')}" sort="auto(paymentDate)" align="left" />
 			            <listheader label="${c:l('txt.ui.common.Type')}" sort="auto(type)" align="left" />
@@ -104,28 +201,28 @@
 			        </template>
 			    </listbox>
 			    
-			    <vlayout>
-				    <hbox align="center" vflex="1">
-				    	<hbox style="margin-right: 5px;" align="center" vflex="1">
-					    	<label value="${c:l('txt.ui.common.PayedSum')} " style="font-size: 18px;" />
-					    	<label value="@load(vm.coursePaymentVO.paymentSum)" style="font-size: 18px; font-weight: bold;" />
-					    	<label value="${c:l('txt.ui.common.CZK')}" style="font-size: 18px; font-weight: bold;"/>
-				    	</hbox>
+<!-- 			    <vlayout> -->
+<!-- 				    <hbox align="center" vflex="1"> -->
+<!-- 				    	<hbox style="margin-right: 5px;" align="center" vflex="1"> -->
+<!-- 					    	<label value="@load(vm.coursePaymentVO.paymentSum)" style="font-size: 18px; font-weight: bold;" /> -->
+<!-- 					    	<label value="${c:l('txt.ui.common.CZK')} - " style="font-size: 18px; font-weight: bold;"/> -->
+<!-- 				    		<label value="@load(vm.coursePaymentVO.state) @converter(vm.enumLabelConverter)" style="font-size: 18px; font-weight: bold;" /> -->
+<!-- 				    	</hbox> -->
 				    	
-				    	<hbox align="center" vflex="1" >
-					    	<a iconSclass="z-icon-exclamation-circle" style="font-size: 20px; color: red;" visible="@load(vm.coursePaymentVO.state eq 'NO_PAYMENT')" />
-						    <a iconSclass="z-icon-circle" style="font-size: 20px; color: orange;" visible="@load(vm.coursePaymentVO.state eq 'SEMESTER_FIRST_PARTLY')"/>
-						    <a iconSclass="z-icon-check-circle" style="font-size: 20px; color: green;" visible="@load(vm.coursePaymentVO.state eq 'SEMESTER_FIRST_PAYED' or vm.coursePaymentVO.state eq 'SEMESTER_SECOND_PARTLY' or vm.coursePaymentVO.state eq 'SEMESTER_SECOND_PAYED')" />
+<!-- 				    	<hbox align="center" vflex="1" > -->
+<!-- 					    	<a iconSclass="z-icon-exclamation-circle" style="font-size: 20px; color: red;" visible="@load(vm.coursePaymentVO.state eq 'NO_PAYMENT')" /> -->
+<!-- 						    <a iconSclass="z-icon-circle" style="font-size: 20px; color: orange;" visible="@load(vm.coursePaymentVO.state eq 'SEMESTER_FIRST_PARTLY')"/> -->
+<!-- 						    <a iconSclass="z-icon-check-circle" style="font-size: 20px; color: green;" visible="@load(vm.coursePaymentVO.state eq 'SEMESTER_FIRST_PAYED' or vm.coursePaymentVO.state eq 'SEMESTER_SECOND_PARTLY' or vm.coursePaymentVO.state eq 'SEMESTER_SECOND_PAYED')" /> -->
 						    
-						    <a iconSclass="z-icon-exclamation-circle" style="font-size: 20px; color: red;" visible="@load(vm.coursePaymentVO.state eq 'SEMESTER_FIRST_PAYED')" />
-						    <a iconSclass="z-icon-circle" style="font-size: 20px; color: orange;" visible="@load(vm.coursePaymentVO.state eq 'SEMESTER_SECOND_PARTLY')"/>
-						    <a iconSclass="z-icon-check-circle" style="font-size: 20px; color: green;" visible="@load(vm.coursePaymentVO.state eq 'SEMESTER_SECOND_PAYED')" />
-				    	</hbox>
-				    </hbox>
-				    <label value="@load(vm.coursePaymentVO.priceFirstSemester)" />
-				    <label value="@load(vm.coursePaymentVO.priceSecondSemester)" />
-				    <label value="@load(vm.coursePaymentVO.state) @converter(vm.enumLabelConverter)" />
-			    </vlayout>
+<!-- 						    <a iconSclass="z-icon-exclamation-circle" style="font-size: 20px; color: red;" visible="@load(vm.coursePaymentVO.state eq 'SEMESTER_FIRST_PAYED')" /> -->
+<!-- 						    <a iconSclass="z-icon-circle" style="font-size: 20px; color: orange;" visible="@load(vm.coursePaymentVO.state eq 'SEMESTER_SECOND_PARTLY')"/> -->
+<!-- 						    <a iconSclass="z-icon-check-circle" style="font-size: 20px; color: green;" visible="@load(vm.coursePaymentVO.state eq 'SEMESTER_SECOND_PAYED')" /> -->
+<!-- 				    	</hbox> -->
+				    	
+<!-- 				    	<label value="@load(vm.coursePaymentVO.priceFirstSemester)" visible="false" /> -->
+<!-- 				    	<label value="@load(vm.coursePaymentVO.priceSecondSemester)" visible="false" /> -->
+<!-- 				    </hbox> -->
+<!-- 			    </vlayout> -->
 			</vbox>
 			
 			<vbox hflex="1" />
