--- a/scb-ui-zk/src/main/webapp/pages/secured/TRAINER/seznam-kurzu.zul
+++ b/scb-ui-zk/src/main/webapp/pages/secured/TRAINER/seznam-kurzu.zul
@@ -44,17 +44,8 @@
 			            		</vbox>
 			            		<vbox hflex="1" vflex="1" align="end" pack="center" sclass="header-div" >
 			            			<hbox vflex="1" pack="center" align="center">
-			            				<label value="${c:l('txt.ui.common.year')}:" style="margin-right: 5px;"/>
-			            				<listbox id="courseYear" 
-			            					selectedItem="@bind(vm.courseYearSelected)" 
-											onSelect="@command('courseYearChangeCmd')"
-											model="@load(vm.courseYearList)"
-											mold="select"
-											height="25px" >
-											<template name="model">
-			            						<listitem label="${each}" value="${each}" />
-			            					</template>
-										</listbox>
+			            				<!-- Rocnik -->
+			            				<include src="/pages/common/component/context-year.zul"/>
 			            				<button iconSclass="z-icon-download" onClick="@command('exportToExcel',listbox=courseList)" tooltiptext="${c:l('txt.ui.common.downloadToFile')}" />
 		            					<button iconSclass="z-icon-refresh" onClick="@command('refreshDataCmd')" tooltiptext="${c:l('txt.ui.common.refreshData')}" />
 									</hbox>
