--- a/scb-ui-zk/src/main/webapp/pages/secured/USER/ucastnik.zul
+++ b/scb-ui-zk/src/main/webapp/pages/secured/USER/ucastnik.zul
@@ -241,17 +241,8 @@
 								            		</vbox>
 								            		<vbox hflex="1" vflex="1" align="end" pack="center" sclass="header-div" >
 								            			<hbox vflex="1" pack="center" align="center">
-								            				<label value="${c:l('txt.ui.common.year')}:" style="margin-right: 5px;"/>
-								            				<listbox id="courseYear" 
-								            					selectedItem="@bind(vm.courseYearSelected)" 
-																onSelect="@command('courseYearChangeCmd')"
-																model="@load(vm.courseYearList)"
-																mold="select"
-																height="25px" >
-																<template name="model">
-								            						<listitem label="${each}" value="${each}" />
-								            					</template>
-															</listbox>
+								            				<!-- Rocnik -->
+			            									<include src="/pages/common/component/context-year.zul"/>
 														</hbox>
 													</vbox>
 												</hbox>
