--- a/scb-ui-zk/src/main/webapp/pages/secured/ADMIN/seznam-prihlasek.zul
+++ b/scb-ui-zk/src/main/webapp/pages/secured/ADMIN/seznam-prihlasek.zul
@@ -165,36 +165,42 @@
 <!-- 			                <listcell label="${each.courseParticipant.personalNo}" onDoubleClick="@command('detailCmd', uuid=each.uuid)" /> -->
 			                <listcell label="" onDoubleClick="@command('detailCmd', uuid=each.uuid)" >
 			                	<hbox hflex="1" vflex="1" align="center">
-				                	<label value="${each.courseParticRepresentative.contact.surname} ${each.courseParticRepresentative.contact.firstname}" />
-		                			<!-- Kontakt popup -->
-				                	<a iconSclass="z-icon-info-circle" popup="contactPopup_${each.uuid}, position=after_end" style="font-size: large; margin-left: 5px;" tooltiptext="${c:l('txt.ui.common.contact')}" />
-				                	<popup id="contactPopup_${each.uuid}">
-								    	<vbox style="margin: 5px;">
-								    		<grid hflex="min" vflex="min">
-												<auxhead>
-													<auxheader class="header" colspan="3" >
-														<vbox hflex="1" vflex="1" sclass="header-div" pack="center" >
-															<label value="${c:l('txt.ui.common.contact')}" />
-														</vbox>
-													</auxheader>
-												</auxhead>
-												<columns>
-													<column />
-													<column align="left"/>
-												</columns>
-												<rows>
-													<row>
-														<label value="${c:l('txt.ui.common.phone')}"/>
-														<label value="${each.courseParticRepresentative.contact.phone1}"/>
-													</row>
-													<row>
-														<label value="${c:l('txt.ui.common.email')}"/>
-														<label value="${each.courseParticRepresentative.contact.email1}"/>
-													</row>
-												</rows>
-											</grid>
-								    	</vbox>
-								    </popup>
+				                	<hbox hflex="1">
+				                		<vbox hflex="1">
+						                	<label value="${each.courseParticRepresentative.contact.surname} ${each.courseParticRepresentative.contact.firstname}" />
+				                		</vbox>
+				                		<vbox width="30px" align="center" >
+				                			<!-- Kontakt popup -->
+						                	<a iconSclass="z-icon-info-circle" popup="contactPopup_${each.uuid}, position=after_end" style="font-size: large; margin-left: 5px;" tooltiptext="${c:l('txt.ui.common.contact')}" />
+						                	<popup id="contactPopup_${each.uuid}">
+										    	<vbox style="margin: 5px;">
+										    		<grid hflex="min" vflex="min">
+														<auxhead>
+															<auxheader class="header" colspan="3" >
+																<vbox hflex="1" vflex="1" sclass="header-div" pack="center" >
+																	<label value="${c:l('txt.ui.common.contact')}" />
+																</vbox>
+															</auxheader>
+														</auxhead>
+														<columns>
+															<column />
+															<column align="left"/>
+														</columns>
+														<rows>
+															<row>
+																<label value="${c:l('txt.ui.common.phone')}"/>
+																<label value="${each.courseParticRepresentative.contact.phone1}"/>
+															</row>
+															<row>
+																<label value="${c:l('txt.ui.common.email')}"/>
+																<label value="${each.courseParticRepresentative.contact.email1}"/>
+															</row>
+														</rows>
+													</grid>
+										    	</vbox>
+										    </popup>
+				                		</vbox>
+				                	</hbox>
 			                	</hbox>
 			                </listcell>
 <!-- 			                <listcell label="${each.courseParticRepresentative.contact.phone1}" onDoubleClick="@command('detailCmd', uuid=each.uuid)" /> -->
