payment list page

--- a/scb-ui-zk/src/main/webapp/pages/common/template/menu.zul
+++ b/scb-ui-zk/src/main/webapp/pages/common/template/menu.zul
@@ -101,6 +101,16 @@
 				href="/pages/secured/ADMIN/seznam-uzivatelu.zul" >
 			</menuitem>
 			
+			<!-- Platby -->
+			<menuitem style="text-align: center; width: 100px;"
+				label="${c:l('txt.ui.menu.payments')}" 
+				id="menu_bankPaymentList"
+				iconSclass="z-icon-credit-card" 
+				tooltiptext="${c:l('txt.ui.menu.bankPayments')}"
+				visible="@load(vm.isUserLogged() and vm.isLoggedUserInRole('ADMIN'))"
+				href="/pages/secured/ADMIN/seznam-bankovnich-plateb.zul" >
+			</menuitem>
+			
 			<!-- Nastaveni -->
 			<menuitem style="text-align: center; width: 100px;"
 				label="${c:l('txt.ui.menu.configuration')}" 
