--- a/scb-ui-zk/src/main/webapp/pages/secured/ADMIN/seznam-bankovnich-plateb.zul
+++ b/scb-ui-zk/src/main/webapp/pages/secured/ADMIN/seznam-bankovnich-plateb.zul
@@ -38,7 +38,7 @@
 			            				<label value="${c:l('txt.ui.menu.bankPayments')}" style="margin-right:5px;" />
 			            			</hbox>
 			            		</vbox>
-			            		<vbox hflex="1" vflex="1" align="end" pack="center" sclass="header-div" >
+			            		<vbox hflex="min" vflex="1" align="end" pack="center" sclass="header-div" >
 			            			<hbox vflex="1" pack="center" align="center">
 			            				<button label="${c:l('txt.ui.common.Refresh')}" sclass="btn-warning" onClick="@command('reloadPaymentsCmd')" style="margin-right: 5px; "/>
 			            				<!-- Rocnik -->
@@ -52,14 +52,14 @@
 			        </auxhead>
 			        
 			        <!-- Filter -->
-<!-- 					<auxhead height="37px"> -->
-<!-- 						<auxheader class="filter"> -->
+					<auxhead height="37px">
+						<auxheader class="filter">
 <!-- 							<textbox hflex="1" -->
 <!-- 								instant="true" -->
 <!-- 								value="@bind(vm.filter.usernameName)" -->
 <!-- 								onChange="@command('filterDomCmd')" /> -->
-<!-- 						</auxheader> -->
-<!-- 						<auxheader class="filter"> -->
+						</auxheader>
+						<auxheader class="filter">
 <!-- 							<listbox selectedItem="@bind(vm.filter.roleItem)"  -->
 <!-- 								model="@load(vm.roleListWithEmptyItem)" -->
 <!-- 								onSelect="@command('filterDomCmd')" -->
@@ -71,28 +71,20 @@
 <!-- 					               	<listitem label="@bind(each.label)" value="@bind(each)"/> -->
 <!-- 					               </template> -->
 <!-- 							</listbox> -->
-<!-- 						</auxheader> -->
-<!-- 						<auxheader class="filter"> -->
+						</auxheader>
+						<auxheader class="filter">
 <!-- 							<textbox hflex="1" -->
 <!-- 								instant="true" -->
-<!-- 								value="@bind(vm.filter.completeName)" -->
+<!-- 								value="@bind(vm.filter.varSymbol)" -->
 <!-- 								onChange="@command('filterDomCmd')" /> -->
-<!-- 						</auxheader> -->
-<!-- 						<auxheader class="filter"> -->
+						</auxheader>
+						<auxheader class="filter">
 <!-- 							<textbox hflex="1" -->
 <!-- 								instant="true" -->
 <!-- 								value="@bind(vm.filter.email)" -->
 <!-- 								onChange="@command('filterDomCmd')" /> -->
-<!-- 						</auxheader> -->
-<!-- 						<auxheader class="filter"> -->
-<!-- 							<textbox hflex="1" -->
-<!-- 								instant="true" -->
-<!-- 								value="@bind(vm.filter.phone)" -->
-<!-- 								onChange="@command('filterDomCmd')" /> -->
-<!-- 						</auxheader> -->
-<!-- 						<auxheader class="filter"> -->
-<!-- 						</auxheader> -->
-<!-- 					</auxhead> -->
+						</auxheader>
+					</auxhead>
 					
 <!-- 					provedl -->
 <!-- 					zpravaProPrijemnce -->
@@ -101,7 +93,7 @@
 <!-- 					protiucet.nazevBanky -->
 
 			        <listhead>
-			            <listheader label="${c:l('txt.ui.common.date')}" sort="auto(datumPohybu)" align="left" hflex="1" />
+			            <listheader label="${c:l('txt.ui.common.date')}" sort="auto(datumPohybu)" align="center" hflex="min" />
 			            <listheader label="${c:l('txt.ui.common.Amount')}" sort="auto(objem)" align="center" hflex="1" />
 			            <listheader label="${c:l('txt.ui.common.VarSymbol')}" sort="auto(variabilniSymbol)" align="center" hflex="1" />
 			            <listheader label="${c:l('txt.ui.common.ZUctu')}" sort="auto(protiucet.nazevUctu)" align="left" hflex="2" />
@@ -109,10 +101,53 @@
 			        
 			        <template name="model">
 			            <listitem>
-			                <listcell label="${each.datumPohybu.time}" />
+			                <listcell label="@load(each.datumPohybu.time) @converter(vm.dateConverter)" />
 			                <listcell label="${each.objem} ${c:l('txt.ui.common.CZK')}" />
 			                <listcell label="${each.variabilniSymbol}" />	
-			                <listcell label="${each.protiucet.nazevUctu}" />
+			                <listcell>
+			                	
+			                	
+			                	<hbox hflex="1" vflex="1" align="center">
+				                	<hbox hflex="1">
+				                		<vbox hflex="1">
+						                	<label value="${each.protiucet.nazevUctu}" />
+				                		</vbox>
+				                		<vbox width="30px" align="center" >
+				                			<!-- Z uctu popup -->
+						                	<a iconSclass="z-icon-info-circle" popup="paymentPopup_${each.idPohybu}, position=after_end" style="font-size: large; margin-left: 5px;" tooltiptext="${c:l('txt.ui.common.Podrobnosti')}" />
+						                	<popup id="paymentPopup_${each.idPohybu}">
+										    	<vbox style="margin: 5px;">
+										    		<grid hflex="min" vflex="min">
+														<auxhead>
+															<auxheader class="header" colspan="3" >
+																<vbox hflex="1" vflex="1" sclass="header-div" pack="center" >
+																	<label value="${c:l('txt.ui.common.Podrobnosti')}" />
+																</vbox>
+															</auxheader>
+														</auxhead>
+														<columns>
+															<column />
+															<column align="left"/>
+														</columns>
+														<rows>
+															<row>
+																<label value="${c:l('txt.ui.common.CisloUctu')}"/>
+																<label value="${each.protiucet.cisloUctu} / ${each.protiucet.kodBanky}"/>
+															</row>
+															<row>
+																<label value="${c:l('txt.ui.common.ZpravaProPrijemce')}"/>
+																<label value="${each.zpravaProPrijemnce}"/>
+															</row>
+														</rows>
+													</grid>
+										    	</vbox>
+										    </popup>
+				                		</vbox>
+				                	</hbox>
+			                	</hbox>
+			                	
+			                	
+			                </listcell>
 			            </listitem>
 			        </template>
 			    </listbox>
