--- a/scb-ui-zk/src/main/webapp/pages/secured/ADMIN/seznam-bankovnich-plateb.zul
+++ b/scb-ui-zk/src/main/webapp/pages/secured/ADMIN/seznam-bankovnich-plateb.zul
@@ -54,35 +54,28 @@
 			        <!-- Filter -->
 					<auxhead height="37px">
 						<auxheader class="filter">
-<!-- 							<textbox hflex="1" -->
-<!-- 								instant="true" -->
-<!-- 								value="@bind(vm.filter.usernameName)" -->
-<!-- 								onChange="@command('filterDomCmd')" /> -->
+							<textbox hflex="1"
+								instant="true"
+								value="@bind(vm.filter.datumPohybu)"
+								onChange="@command('filterDomCmd')" />
 						</auxheader>
 						<auxheader class="filter">
-<!-- 							<listbox selectedItem="@bind(vm.filter.roleItem)"  -->
-<!-- 								model="@load(vm.roleListWithEmptyItem)" -->
-<!-- 								onSelect="@command('filterDomCmd')" -->
-<!-- 								sclass="form-input-text" -->
-<!-- 								hflex="1" -->
-<!-- 								height="24px" -->
-<!-- 								mold="select" > -->
-<!-- 								<template name="model"> -->
-<!-- 					               	<listitem label="@bind(each.label)" value="@bind(each)"/> -->
-<!-- 					               </template> -->
-<!-- 							</listbox> -->
+							<textbox hflex="1"
+								instant="true"
+								value="@bind(vm.filter.objem)"
+								onChange="@command('filterDomCmd')" />
 						</auxheader>
 						<auxheader class="filter">
-<!-- 							<textbox hflex="1" -->
-<!-- 								instant="true" -->
-<!-- 								value="@bind(vm.filter.varSymbol)" -->
-<!-- 								onChange="@command('filterDomCmd')" /> -->
+							<textbox hflex="1"
+								instant="true"
+								value="@bind(vm.filter.varSymbol)"
+								onChange="@command('filterDomCmd')" />
 						</auxheader>
 						<auxheader class="filter">
-<!-- 							<textbox hflex="1" -->
-<!-- 								instant="true" -->
-<!-- 								value="@bind(vm.filter.email)" -->
-<!-- 								onChange="@command('filterDomCmd')" /> -->
+							<textbox hflex="1"
+								instant="true"
+								value="@bind(vm.filter.nazevUctu)"
+								onChange="@command('filterDomCmd')" />
 						</auxheader>
 					</auxhead>
 					
@@ -93,7 +86,7 @@
 <!-- 					protiucet.nazevBanky -->
 
 			        <listhead>
-			            <listheader label="${c:l('txt.ui.common.date')}" sort="auto(datumPohybu)" align="center" hflex="min" />
+			            <listheader label="${c:l('txt.ui.common.date')}" sort="auto(datumPohybu)" align="center" width="${vm.dateColWidth}" />
 			            <listheader label="${c:l('txt.ui.common.Amount')}" sort="auto(objem)" align="center" hflex="1" />
 			            <listheader label="${c:l('txt.ui.common.VarSymbol')}" sort="auto(variabilniSymbol)" align="center" hflex="1" />
 			            <listheader label="${c:l('txt.ui.common.ZUctu')}" sort="auto(protiucet.nazevUctu)" align="left" hflex="2" />
@@ -105,8 +98,6 @@
 			                <listcell label="${each.objem} ${c:l('txt.ui.common.CZK')}" />
 			                <listcell label="${each.variabilniSymbol}" />	
 			                <listcell>
-			                	
-			                	
 			                	<hbox hflex="1" vflex="1" align="center">
 				                	<hbox hflex="1">
 				                		<vbox hflex="1">
@@ -145,8 +136,6 @@
 				                		</vbox>
 				                	</hbox>
 			                	</hbox>
-			                	
-			                	
 			                </listcell>
 			            </listitem>
 			        </template>
