--- a/scb-ui-zk/src/main/webapp/pages/secured/TRAINER/detail-platby.zul
+++ b/scb-ui-zk/src/main/webapp/pages/secured/TRAINER/detail-platby.zul
@@ -33,6 +33,8 @@
                            		placeholder="*"
                            		hflex="1"
                            		tooltiptext="${c:l('msg.ui.validation.err.valueRequired')}"
+                           		readonly="${vm.paymentTypeAutomatic}"
+                           		buttonVisible="${!vm.paymentTypeAutomatic}"
                            		tabindex="1"
                            		focus="true" />
 							<hbox hflex="1" align="end" pack="end" sclass="form-grid-validation-hbox">
@@ -54,6 +56,7 @@
 								sclass="form-input-text"
 								tabindex="2"
 								hflex="1"
+								disabled="${vm.paymentTypeAutomatic}"
 								mold="select" >
 								<template name="model">
 					               	<listitem label="@bind(each.label)" value="@bind(each)"/>
@@ -75,6 +78,7 @@
 								maxlength="11"
 								placeholder="*"
 								sclass="form-input-text"
+								readonly="${vm.paymentTypeAutomatic}"
 								tooltiptext="${c:l('msg.ui.validation.err.valueRequired')}"
 								tabindex="3"
 								hflex="1" />
@@ -94,6 +98,7 @@
 							<textbox id="description" 
 								value="@bind(fx.payment.description)"
 								multiline="true"
+								readonly="${vm.paymentTypeAutomatic}"
 								rows="3"
 								tabindex="4"
 								hflex="1" />
@@ -127,6 +132,7 @@
 			sclass="btn-success"
 			tabindex="4"
 			style="margin-top: 10px"
+			visible="${!vm.paymentTypeAutomatic}"
 			iconSclass="z-icon-check"  />
 	    
     </vbox>
