--- a/scb-ui-zk/src/main/webapp/pages/common/template/template.zul
+++ b/scb-ui-zk/src/main/webapp/pages/common/template/template.zul
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <?taglib uri="http://www.zkoss.org/dsp/web/core" prefix="c" ?>
+
+<?xel-method prefix="common" name="getOrgNameStatic"
+	class="com.jzaoralek.scb.ui.common.vm.BaseVM"
+	signature="com.jzaoralek.scb.ui.common.vm.BaseVM getOrgNameStatic()"?>
      
 <zk>
 	<style>
