--- a/scb-ui-zk/src/main/webapp/pages/public/dashboard.zul
+++ b/scb-ui-zk/src/main/webapp/pages/public/dashboard.zul
@@ -1,4 +1,4 @@
-<?page title="${c:l('txt.ui.organization.name')} - ${c:l('txt.ui.menu.dashboard')}"?>
+<?page title="${common:getOrgNameStatic()} - ${c:l('txt.ui.menu.dashboard')}"?>
 <?init class="org.zkoss.zk.ui.util.Composition" arg0="/pages/common/template/template.zul"?>
 <?component name="headline" macroURI="/pages/common/template/page-headline.zul"?>
 
@@ -13,7 +13,7 @@
 					
 					<vbox hflex="20" pack="center" align="center">
 						<hbox>
-							<headline label="${c:l('txt.ui.dashboard.welcomeInfo')}"  menuSelected="menu_dashboard" iconSclass="z-icon-tachometer" />
+							<headline label="${vm.welcomeInfo}" menuSelected="menu_dashboard" iconSclass="z-icon-tachometer" />
 						</hbox>
 						<button label="@load(vm.newCourseApplicationTitle)" 
 							href="/pages/public/prihlaska-do-klubu.zul"
