--- a/scb-ui-zk/src/main/webapp/pages/secured/ADMIN/uzivatel.zul
+++ b/scb-ui-zk/src/main/webapp/pages/secured/ADMIN/uzivatel.zul
@@ -1,5 +1,5 @@
 <?meta http-equiv="Content-Type" content="text/html; charset=UTF-8"?>
-<?page title="${c:l('txt.ui.organization.name')} - ${vm.pageHeadline}" ?>
+<?page title="${common:getOrgNameStatic()} - ${c:l('txt.ui.menu.user')}" ?>
 <?init class="org.zkoss.zk.ui.util.Composition" arg0="/pages/common/template/template.zul"?>
 <?component name="headline" macroURI="/pages/common/template/page-headline.zul"?>
 <?component name="scbUser" macroURI="/pages/common/component/scbUser.zul"?>
