--- a/scb-ui-zk/src/main/webapp/pages/secured/TRAINER/kurz-vyuka.zul
+++ b/scb-ui-zk/src/main/webapp/pages/secured/TRAINER/kurz-vyuka.zul
@@ -1,5 +1,5 @@
 <?meta http-equiv="Content-Type" content="text/html; charset=UTF-8"?>
-<?page title="${c:l('txt.ui.organization.name')}" ?>
+<?page title="${common:getOrgNameStatic()}" ?>
 <?init class="org.zkoss.zk.ui.util.Composition" arg0="/pages/common/template/template.zul"?>
 <?component name="headline" macroURI="/pages/common/template/page-headline.zul"?>
 <?component name="validMsg" macroURI="/pages/common/component/validMsg.zul"?>
